[package]
name = "planetoid"
version = "0.1.0"
authors = ["Uggla <uggla@free.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.3"
tungstenite = '0.13.0'
url = '2.2.2'
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0"
structopt = "0.3.21"
