[package]
name = "planetoid"
version = "0.1.0"
authors = ["Uggla <uggla@free.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.10"
url = '2.2.2'
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.71"
structopt = "0.3.25"
log = "0.4.14"
simple_logger = "1.15.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tungstenite = '0.16.0'
