[package]
name = "planetoid"
version = "0.1.0"
authors = ["Uggla <uggla@free.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.13"
url = '2.2.2'
serde = {version = "1.0.133", features = ["derive"]}
serde_json = "1.0.74"
structopt = "0.3.26"
log = "0.4.14"

[dependencies.simple_logger]
version = "1.16.0"
# default-features = false
# features = ["timestamps_utc","colors","stderr"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tungstenite = '0.16.0'
