[package]
name = "planetoid"
version = "0.1.0"
authors = ["Uggla <uggla@free.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.15"
url = '2.2.2'
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.94"
structopt = "0.3.26"
log = "0.4.16"

[dependencies.simple_logger]
version = "2.1.0"
# default-features = false
# features = ["timestamps_utc","colors","stderr"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tungstenite = '0.17.2'
